# AgentBench_Tuning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agent-memory/dataset-creator/: MEMORY.md
.claude/agent-memory/literature-survey-agent/: MEMORY.md  survey_agentbench_small_models.md  survey_dpo_preference_data.md
.claude/agent-memory/model-trainer/: MEMORY.md  marimo-patterns.md  qwen-training.md
.claude/agents/: dataset-creator.md  literature-survey-agent.md  llm-ecosystem-engineer.md  model-trainer.md
.devcontainer/: Dockerfile  devcontainer.json
dataset/notebooks/: 01_build_training_set_v1.py  02_build_rl_prompts_v1.py  03_generate_dpo_pairs_v1.py  example_dataset_creation.py
docs/plans/: comprehensive_training_plan_v0.md  rl_training_plan_v1.md
scripts/: export_to_ipynb.sh
training/notebooks/: 01_sft_qwen25_7b.py  02_dpo_qwen25_7b.py  example_training.py
